# GraphBuilder

./: CMakeLists.txt  README.md  main.cpp
checker/: Checker.cpp  Checker.h
checker/utils/: EmptyStringException.h  NoSuchFormatException.h
constants/: Constants.h
decoder/: Decoder.cpp  Decoder.h
iLabka/: iLabka.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
iLabka/Info/About_iLabka/: about_ilabka.cpp  about_ilabka.h  about_ilabka.ui
iLabka/Plots/: mplots.cpp  mplots.h  mplots.ui
output/: fourier.txt  reverseFourier.txt
parallel/: execute.cpp  execute.h
qcustomplot/: qcustomplot.cpp  qcustomplot.h
tests/: tests.h
transforms/: fourier.cpp  fourier.h
